--- a/scripts/api.yaml
+++ b/scripts/api.yaml
@@ -19,7 +19,7 @@ spec:
         - api
         env:
         - name: MICRO_RUNTIME
-          value: "kubernetes"
+          value: "service"
         - name: MICRO_SERVER_ADDRESS
           value: "0.0.0.0:8080"
         - name: MICRO_BROKER
@@ -32,6 +32,13 @@ spec:
           value: "etcd"
         - name: MICRO_REGISTRY_ADDRESS
           value: "etcd-cluster-client"
+        - name: MICRO_AUTH
+          value: "jwt"
+        - name: MICRO_AUTH_PUBLIC_KEY
+          valueFrom:
+            secretKeyRef:
+              name: micro-keypair
+              key: public
         image: micro/platform
         imagePullPolicy: Always
         ports:
