--- a/scripts/secrets.yaml
+++ b/scripts/secrets.yaml
@@ -4,6 +4,7 @@ metadata:
   name: github-credentials
 type: Opaque
 data:
+  GITHUB_ORG_ID: ---
   GITHUB_TEAM_ID: ---
   GITHUB_OAUTH_CLIENT_ID: ---
   GITHUB_OAUTH_CLIENT_SECRET: ---
